--- a/src/app/appsettings.json
+++ b/src/app/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=localhost:3306;Database=project;Uid=project;Pwd=project;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
