--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - 5000
     depends_on:
       - "mysql"
+      - "redis"
+      - "rabbit_mq"
     networks:
       - aspnetcoreapp-network
   
@@ -42,7 +44,26 @@ services:
       - "mysql"
     networks:
       - aspnetcoreapp-network
-    
+
+  rabbit_mq:
+    container_name: "web_app_rabbitmq"
+    image: rabbitmq:3-management
+    hostname: "web_app_rabbit"
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
+      RABBITMQ_DEFAULT_USER: "rabbitmq"
+      RABBITMQ_DEFAULT_PASS: "rabbitmq"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    labels:
+      NAME: "rabbit_mq"
+    depends_on:
+      - "mysql"
+    networks:
+      - aspnetcoreapp-network
+
   mysql:
     container_name: "web_app_mysql"
     image: mysql:latest
